
NEXT (TBD)
----------
- reduce memory footprint of expression tiler (#18d4acc)

1.2.10 (2019-07-18)
-------------------
- add more colormap options (from matplotlib) and switch from txt files to numpy binaries (#115)

1.2.9 (2019-07-11)
------------------
- fix issue #113, adds depreciation warning for `bounds_crs` in favor of `dst_crs` 
in `rio_tiler.utils.get_vrt_transform`

1.2.8 (2019-07-08)
------------------

- Add kwargs options in landsat8.tile, sentinel2.tile and cbers.tile functions to 
allow `resampling_method` and `tile_edge_padding` options forwarding to utils._tile_read.
- Add Input (bounds_crs) and Output (dst_crs) option to `utils._tile_read` function (#108)

1.2.7 (2019-05-14)
------------------

- Revert changes introduced in #106 (see #105)
- Refactor tests

1.2.6 (2019-05-10) - DELETED
------------------

- Use same resampling method for mask and for data (#105)


1.2.5 (2019-05-08)
------------------

- add tile_edge_padding option to be passed to rio_tiler.utils._tile_read to reduce sharp edges that occur due to resampling (#104)

1.2.4 (2019-04-16)
------------------

- add histogram_range options to be passed to rio_tiler.{module}.metadata function (#102)

1.2.3 (2019-04-04)
------------------

- add histogram_bins options to be passed to rio_tiler.{module}.metadata function (#98)

Bug fixes:

- return index number with band descriptions (#99)

1.2.2 (2019-04-03)
------------------

- add mercator min/max zoom info in metadata output from rio_tiler.utils.raster_get_stats (#96)
- add band description (band name) in metadata output from rio_tiler.utils.raster_get_stats (#96)

1.2.1 (2019-03-26)
------------------

- Replace rio-pansharpen dependency with a fork of the brovey function directly
into `rio_tiler.utils` (rio-pansharpen is unmaintened and not compatible with 
rasterio>=1) (#94).

1.2.0 (2019-03-26)
------------------

- `rio_tiler.utils.array_to_image`'s color_map arg can be a dictionary of discrete values (#91)

Breacking Changes: