@@ -64,14 +64,14 @@ def test_metadata_valid_default(monkeypatch):
     assert meta["sceneid"] == CBERS_MUX_SCENE
     assert len(meta["bounds"]["value"]) == 4
     assert len(meta["statistics"].items()) == 4
-    assert meta["statistics"]["5"]["pc"] == [28, 93]
+    assert meta["statistics"]["5"]["pc"] == [28, 91]
 
     meta = cbers.metadata(CBERS_MUX_SCENE, histogram_bins=20)
     assert meta["sceneid"] == CBERS_MUX_SCENE
     assert len(meta["bounds"]["value"]) == 4
     assert len(meta["statistics"].items()) == 4
     assert len(meta["statistics"]["5"]["histogram"][0]) == 20
-    assert meta["statistics"]["5"]["pc"] == [28, 93]
+    assert meta["statistics"]["5"]["pc"] == [28, 91]
 
     meta = cbers.metadata(CBERS_AWFI_SCENE)
     assert meta["sceneid"] == CBERS_AWFI_SCENE
@@ -100,7 +100,7 @@ def test_metadata_valid_custom(monkeypatch):
     meta = cbers.metadata(CBERS_MUX_SCENE, pmin=5, pmax=95)
     assert meta.get("sceneid") == CBERS_MUX_SCENE
     assert len(meta["bounds"]["value"]) == 4
-    assert meta["statistics"]["5"]["pc"] == [29, 59]
+    assert meta["statistics"]["5"]["pc"] == [29, 60]
 
 
 def test_tile_valid_default(monkeypatch):
