@@ -43,7 +43,7 @@ def test_metadata_valid():
     assert len(meta["band_descriptions"]) == 3
     assert (1, "band1") == meta["band_descriptions"][0]
     assert len(meta["statistics"].items()) == 3
-    assert meta["statistics"][1]["pc"] == [12, 198]
+    assert meta["statistics"][1]["pc"] == [11, 199]
 
 
 def test_metadata_valid_custom():
@@ -56,7 +56,7 @@ def test_metadata_valid_custom():
     assert len(meta["bounds"]["value"]) == 4
     assert len(meta["statistics"].items()) == 3
     assert len(meta["statistics"][1]["histogram"][0]) == 20
-    assert meta["statistics"][1]["pc"] == [30, 191]
+    assert meta["statistics"][1]["pc"] == [28, 192]
 
 
 def test_tile_valid_default():
